--- a/.github/workflows/bot-signoff.yaml
+++ b/.github/workflows/bot-signoff.yaml
@@ -22,6 +22,11 @@ name: bot-signoff
   push:
     branches: ["master"]
 
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
+
 env:
   GOPRIVATE: github.com/usetero/
   GH_TOKEN: ${{ github.token }}
