--- a/.github/workflows/bot-signoff.yaml
+++ b/.github/workflows/bot-signoff.yaml
@@ -39,12 +39,6 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    # Skip if triggered by a pull_request event where the branch has been deleted
-    # This happens when release-please PRs are merged - the branch is deleted but
-    # a stale workflow run may still reference it
-    if: |
-      github.event_name != 'pull_request' ||
-      !startsWith(github.head_ref, 'release-please--')
     steps:
       - name: Generate a token
         id: generate-token
@@ -57,7 +51,9 @@ jobs:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          ref: ${{ github.head_ref || github.ref }}
+          # Use the merge commit SHA for pull_request events (always valid even if branch deleted)
+          # or the push commit SHA for push events
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
           fetch-depth: 0
           submodules: "true"
       - uses: cashapp/activate-hermit@12a728b03ad41eace0f9abaf98a035e7e8ea2318 # v1.1.4
