--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -67,10 +67,13 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            libvectorscan-dev \
-            libzstd-dev \
-            zlib1g-dev
+          # hyperscan is x86-only, vectorscan is the ARM-compatible fork
+          if [ "$(uname -m)" = "x86_64" ]; then
+            sudo apt-get install -y libhyperscan-dev
+          else
+            sudo apt-get install -y libvectorscan-dev
+          fi
+          sudo apt-get install -y libzstd-dev zlib1g-dev
 
       - name: Setup Zig
         uses: mlugg/setup-zig@fa65c4058643678a4e4a9a60513944a7d8d35440 # v2.1.0
