--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,10 @@
 ---
 # Release Workflow
 #
-# Builds and pushes multi-arch container images.
+# Builds and publishes:
+# - Multi-arch container images (linux/amd64, linux/arm64)
+# - Standalone binaries (linux-amd64, linux-arm64, darwin-arm64)
+#
 # Triggered by release-please or manually.
 name: release
 
@@ -25,15 +28,161 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 permissions:
-  contents: read
+  contents: write
   packages: write
 
 concurrency:
   group: release-${{ github.ref }}
   cancel-in-progress: false
 
+# =============================================================================
+# Binary Builds
+# =============================================================================
+
 jobs:
-  build:
+  binary-build-linux:
+    strategy:
+      fail-fast: false
+      matrix:
+        distribution: ${{ github.event_name == 'workflow_dispatch' && fromJson(format('["{0}"]', inputs.distribution)) || fromJson('["edge", "datadog", "otlp"]') }}
+        arch:
+          - runner: ubuntu-24.04
+            suffix: linux-amd64
+          - runner: ubuntu-24.04-arm
+            suffix: linux-arm64
+    runs-on: ${{ matrix.arch.runner }}
+    timeout-minutes: 30
+    steps:
+      - name: Checkout
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+
+      - name: Set binary name
+        run: |
+          if [ "${{ matrix.distribution }}" = "edge" ]; then
+            echo "BINARY_NAME=edge" >> $GITHUB_ENV
+          else
+            echo "BINARY_NAME=edge-${{ matrix.distribution }}" >> $GITHUB_ENV
+          fi
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          # hyperscan is x86-only, vectorscan is the ARM-compatible fork
+          if [ "$(uname -m)" = "x86_64" ]; then
+            sudo apt-get install -y libhyperscan-dev
+          else
+            sudo apt-get install -y libvectorscan-dev
+          fi
+          sudo apt-get install -y libzstd-dev zlib1g-dev
+
+      - name: Setup Zig
+        uses: mlugg/setup-zig@fa65c4058643678a4e4a9a60513944a7d8d35440 # v2.1.0
+        with:
+          version: 0.15.2
+
+      - name: Fetch Zig dependencies
+        run: |
+          for i in 1 2 3 4 5; do zig build --fetch && break || sleep 10; done
+
+      - name: Build
+        run: |
+          zig build ${{ matrix.distribution }} -Dcpu=baseline -Doptimize=ReleaseSafe
+
+      - name: Prepare artifact
+        run: |
+          mkdir -p artifacts
+          cp zig-out/bin/edge-${{ matrix.distribution }} artifacts/${{ env.BINARY_NAME }}-${{ matrix.arch.suffix }}
+          chmod +x artifacts/${{ env.BINARY_NAME }}-${{ matrix.arch.suffix }}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: binary-${{ matrix.distribution }}-${{ matrix.arch.suffix }}
+          path: artifacts/*
+          if-no-files-found: error
+          retention-days: 1
+
+  binary-build-darwin:
+    strategy:
+      fail-fast: false
+      matrix:
+        distribution: ${{ github.event_name == 'workflow_dispatch' && fromJson(format('["{0}"]', inputs.distribution)) || fromJson('["edge", "datadog", "otlp"]') }}
+    runs-on: macos-14 # Apple Silicon runner
+    timeout-minutes: 45
+    steps:
+      - name: Checkout
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+
+      - name: Set binary name
+        run: |
+          if [ "${{ matrix.distribution }}" = "edge" ]; then
+            echo "BINARY_NAME=edge" >> $GITHUB_ENV
+          else
+            echo "BINARY_NAME=edge-${{ matrix.distribution }}" >> $GITHUB_ENV
+          fi
+
+      - name: Install dependencies
+        run: |
+          brew install zig vectorscan zstd
+
+      - name: Fetch Zig dependencies
+        run: |
+          for i in 1 2 3 4 5; do zig build --fetch && break || sleep 10; done
+
+      - name: Build
+        run: |
+          zig build ${{ matrix.distribution }} -Dcpu=baseline -Doptimize=ReleaseSafe
+
+      - name: Prepare artifact
+        run: |
+          mkdir -p artifacts
+          cp zig-out/bin/edge-${{ matrix.distribution }} artifacts/${{ env.BINARY_NAME }}-darwin-arm64
+          chmod +x artifacts/${{ env.BINARY_NAME }}-darwin-arm64
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: binary-${{ matrix.distribution }}-darwin-arm64
+          path: artifacts/*
+          if-no-files-found: error
+          retention-days: 1
+
+  upload-binaries:
+    runs-on: ubuntu-latest
+    needs: [binary-build-linux, binary-build-darwin]
+    if: github.event_name == 'release'
+    timeout-minutes: 10
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
+        with:
+          path: artifacts
+          pattern: binary-*
+          merge-multiple: true
+
+      - name: List artifacts
+        run: ls -la artifacts/
+
+      - name: Upload binaries to release
+        uses: softprops/action-gh-release@a06a81a03ee405af7f2048a818ed3f03bbf83c7b # v2.5.0
+        with:
+          files: artifacts/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Summary
+        run: |
+          echo "## Binaries uploaded to release" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          ls -1 artifacts/ | while read f; do
+            echo "- \`$f\`" >> "$GITHUB_STEP_SUMMARY"
+          done
+
+  # =============================================================================
+  # Docker Image Builds
+  # =============================================================================
+
+  docker-build:
     strategy:
       fail-fast: false
       matrix:
@@ -55,17 +204,6 @@ jobs:
           else
             echo "REGISTRY_IMAGE=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.distribution }}" >> $GITHUB_ENV
           fi
-
-      - name: Install Docker (self-hosted only)
-        if: matrix.arch.runner == 'arm-4-core'
-        run: |
-          if ! command -v docker &> /dev/null; then
-            curl -fsSL https://get.docker.com | sudo sh
-          fi
-          sudo usermod -aG docker $USER
-          sudo systemctl start docker || sudo service docker start || true
-          sudo chmod 666 /var/run/docker.sock
-          timeout 30 bash -c 'while ! docker version; do sleep 1; done'
 
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
@@ -115,9 +253,9 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  merge:
+  docker-merge:
     runs-on: ubuntu-latest
-    needs: build
+    needs: docker-build
     timeout-minutes: 10
     strategy:
       fail-fast: false
@@ -172,7 +310,7 @@ jobs:
 
       - name: Summary
         run: |
-          echo "## 🚀 Release" >> "$GITHUB_STEP_SUMMARY"
+          echo "## Docker Release" >> "$GITHUB_STEP_SUMMARY"
           echo "**Distribution:** ${{ matrix.distribution }}" >> "$GITHUB_STEP_SUMMARY"
           echo "**Image:** ${{ env.REGISTRY_IMAGE }}" >> "$GITHUB_STEP_SUMMARY"
           echo "**Tags:** ${{ steps.meta.outputs.tags }}" >> "$GITHUB_STEP_SUMMARY"
