--- a/config-otlp.json
+++ b/config-otlp.json
@@ -1,8 +1,8 @@
 {
   "listen_address": "127.0.0.1",
   "listen_port": 8080,
-  "upstream_url": "https://otlp.us5.datadoghq.com",
-  "workspace_id": "90A6EFC2-27B8-41BC-9343-43BFB1DF0732",
+  "upstream_url": "https://otlp.${TERO_DD_REGION}.datadoghq.com",
+  "workspace_id": "${TERO_WORKSPACE_ID}",
   "log_level": "info",
   "max_body_size": 1048576,
   "policy_providers": [
@@ -14,8 +14,10 @@
     {
       "id": "http",
       "type": "http",
-      "url": "http://localhost:9090/v1/policy/sync",
-      "headers": [{ "name": "Authorization", "value": "Bearer my-token" }]
+      "url": "${TERO_CONTROL_PLANE_URL}/v1/policy/sync",
+      "headers": [
+        { "name": "Authorization", "value": "Bearer ${TERO_API_TOKEN}" }
+      ]
     }
   ]
 }
