fix: patch const cast issue and build safe in signoff (#94)

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -35,6 +35,7 @@ tasks:
     aliases: [bs]
     cmds:
       - zig build -Doptimize=ReleaseSafe
+      - echo "✅ Built safe"
 
   build:small:
     desc: "Build the project in ReleaseSmall mode"
@@ -58,7 +59,7 @@ tasks:
     desc: "Run all tests"
     aliases: [t]
     cmds:
-      - zig build test
+      - zig build test -Doptimize=ReleaseSafe
 
   test:file:
     desc: "Run tests for a specific file"
@@ -236,6 +237,7 @@ tasks:
     aliases: ["sign", "s"]
     deps:
       - task: do
+      - task: build:safe
     cmds:
       - gh signoff
 
