--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
   "metrics_url": "https://api.${TERO_DD_REGION}.datadoghq.com",
   "log_level": "info",
   "max_body_size": 1048576,
+  "worker_count": 4,
   "policy_providers": [
     {
       "id": "file",
