--- a/.github/workflows/release-lambda.yml
+++ b/.github/workflows/release-lambda.yml
@@ -144,7 +144,7 @@ jobs:
           docker buildx build \
             --progress plain \
             --platform ${{ matrix.platform }} \
-            -f Lambda.Dockerfile \
+            -f lambda/Dockerfile \
             --output type=local,dest=.layers/layer-${{ matrix.arch }} \
             .
 
@@ -156,7 +156,7 @@ jobs:
           cd .layers/layer-${{ matrix.arch }}
 
           # Create the zip with extensions directory
-          zip -r ../tero-edge-extension-${{ matrix.arch }}.zip extensions
+          zip -r ../tero-edge-extension-${{ matrix.arch }}.zip extensions bin lib
 
           cd ..
           echo "Layer zip created:"
