--- a/.github/workflows/release-lambda.yml
+++ b/.github/workflows/release-lambda.yml
@@ -314,10 +314,33 @@ jobs:
           echo "${{ steps.publish.outputs.layer_arn }}" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
+  upload-template:
+    name: Upload CloudFormation template
+    runs-on: ubuntu-24.04
+    needs: [prepare]
+    if: ${{ inputs.dry_run != true }}
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4
+        with:
+          role-to-assume: ${{ secrets.AWS_LAMBDA_LAYER_ROLE_ARN }}
+          aws-region: us-east-1
+
+      - name: Upload template to S3
+        run: |
+          aws s3 cp lambda/template.yaml s3://tero-public/lambda/template.yaml \
+            --content-type "application/x-yaml"
+
+          echo "### Uploaded CloudFormation Template" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**URL:** https://tero-public.s3.amazonaws.com/lambda/template.yaml" >> $GITHUB_STEP_SUMMARY
+
   release-summary:
     name: Release Summary
     runs-on: ubuntu-24.04
-    needs: [prepare, build, publish]
+    needs: [prepare, build, publish, upload-template]
     if: always()
     steps:
       - name: Download all artifacts
